Make dependency on "javax.script" optional
Test presence of "javax.script.ScriptEngine" explicitly and if it can't
be loaded via basic reflection disable script evaluation support for the
`@DisabledIf` and `@EnabledIf` annotations.

Closes #1282