@@ -10,7 +10,6 @@
 
 package org.junit.jupiter.engine.extension;
 
-import static org.junit.jupiter.api.extension.ConditionEvaluationResult.disabled;
 import static org.junit.jupiter.api.extension.ConditionEvaluationResult.enabled;
 import static org.junit.platform.commons.util.AnnotationUtils.findAnnotation;
 
@@ -19,20 +18,13 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
-import javax.script.Bindings;
-import javax.script.ScriptException;
-import javax.script.SimpleBindings;
-
 import org.junit.jupiter.api.condition.DisabledIf;
 import org.junit.jupiter.api.condition.EnabledIf;
 import org.junit.jupiter.api.extension.ConditionEvaluationResult;
 import org.junit.jupiter.api.extension.ExecutionCondition;
 import org.junit.jupiter.api.extension.ExtensionContext;
-import org.junit.jupiter.api.extension.ExtensionContext.Namespace;
 import org.junit.jupiter.api.extension.ScriptEvaluationException;
 import org.junit.jupiter.engine.script.Script;
-import org.junit.jupiter.engine.script.ScriptAccessor;
-import org.junit.jupiter.engine.script.ScriptExecutionManager;
 
 /**
  * {@link ExecutionCondition} that supports the {@link DisabledIf} and {@link EnabledIf} annotation.
@@ -48,9 +40,19 @@ class ScriptExecutionCondition implements ExecutionCondition {
 
 	private static final ConditionEvaluationResult ENABLED_NO_ANNOTATION = enabled("Annotation not present");
 
-	private static final ConditionEvaluationResult ENABLED_ALL = enabled("All results are enabled");
+	private static final String EVALUATOR_CLASS_NAME = "org.junit.jupiter.engine.extension.ScriptExecutionEvaluator";
 
-	private static final Namespace NAMESPACE = Namespace.create(ScriptExecutionCondition.class);
+	private final Evaluator evaluator;
+
+	// Used by the ExtensionRegistry.
+	ScriptExecutionCondition() {
+		this(EVALUATOR_CLASS_NAME);
+	}
+
+	// Used by tests.
+	ScriptExecutionCondition(String evaluatorImplementationName) {
+		this.evaluator = Evaluator.forName(evaluatorImplementationName);
+	}
 
 	@Override
 	public ConditionEvaluationResult evaluateExecutionCondition(ExtensionContext context) {
@@ -62,115 +64,116 @@ class ScriptExecutionCondition implements ExecutionCondition {
 		AnnotatedElement annotatedElement = element.get();
 
 		// Always try to create script instances.
-		List<Script> scripts = new ArrayList<>();
-		createDisabledIfScript(annotatedElement).ifPresent(scripts::add);
-		createEnabledIfScript(annotatedElement).ifPresent(scripts::add);
+		Script disabledScript = createDisabledIfScriptOrNull(annotatedElement);
+		Script enabledScript = createEnabledIfScriptOrNull(annotatedElement);
 
 		// If no scripts are created, no annotation of interest is attached to the underlying element.
-		if (scripts.isEmpty()) {
+		if (disabledScript == null && enabledScript == null) {
 			return ENABLED_NO_ANNOTATION;
 		}
 
-		// Delegate actual script execution to the globally cached manager instance.
-		ScriptExecutionManager scriptExecutionManager = getScriptExecutionManager(context);
-		Bindings bindings = createBindings(context);
-		for (Script script : scripts) {
-			ConditionEvaluationResult result = evaluate(scriptExecutionManager, script, bindings);
-			// Report the first result that is disabled, preventing evaluation of remaining scripts.
-			if (result.isDisabled()) {
-				return result;
-			}
+		// Prepare list with single or two script elements.
+		List<Script> scripts = new ArrayList<>();
+		if (disabledScript != null) {
+			scripts.add(disabledScript);
+		}
+		if (enabledScript != null) {
+			scripts.add(enabledScript);
 		}
 
-		return ENABLED_ALL;
+		// Let the evaluator do its work.
+		return evaluator.evaluate(context, scripts);
 	}
 
-	private Optional<Script> createDisabledIfScript(AnnotatedElement annotatedElement) {
+	private Script createDisabledIfScriptOrNull(AnnotatedElement annotatedElement) {
 		Optional<DisabledIf> disabled = findAnnotation(annotatedElement, DisabledIf.class);
 		if (!disabled.isPresent()) {
-			return Optional.empty();
+			return null;
 		}
 		DisabledIf annotation = disabled.get();
 		String source = createSource(annotation.value());
-		Script script = new Script(annotation, annotation.engine(), source, annotation.reason());
-		return Optional.of(script);
+		return new Script(annotation, annotation.engine(), source, annotation.reason());
 	}
 
-	private Optional<Script> createEnabledIfScript(AnnotatedElement annotatedElement) {
+	private Script createEnabledIfScriptOrNull(AnnotatedElement annotatedElement) {
 		Optional<EnabledIf> enabled = findAnnotation(annotatedElement, EnabledIf.class);
 		if (!enabled.isPresent()) {
-			return Optional.empty();
+			return null;
 		}
 		EnabledIf annotation = enabled.get();
 		String source = createSource(annotation.value());
-		Script script = new Script(annotation, annotation.engine(), source, annotation.reason());
-		return Optional.of(script);
+		return new Script(annotation, annotation.engine(), source, annotation.reason());
 	}
 
 	private String createSource(String[] lines) {
 		return String.join(System.lineSeparator(), lines);
 	}
 
-	private ScriptExecutionManager getScriptExecutionManager(ExtensionContext context) {
-		return context.getRoot().getStore(NAMESPACE).getOrComputeIfAbsent(ScriptExecutionManager.class);
+	/**
+	 * Evaluates scripts and returns a conditional evaluation result.
+	 */
+	interface Evaluator {
+
+		ConditionEvaluationResult evaluate(ExtensionContext context, List<Script> scripts);
+
+		/**
+		 * Create evaluator via reflection to hide the `javax.script` dependency.
+		 *
+		 * <p>This method may return a {@link ThrowingEvaluator} instance on JREs that
+		 * don't provide the "javax.script" package at all. It also returns such an
+		 * instance on JREs that are launched with an active module system using
+		 * insufficient module graphs, i.e. the application does not read
+		 * {@code java.scripting} module.
+		 *
+		 * @see Class#forName(String)
+		 */
+		static Evaluator forName(String name) {
+			// Assert that "javax.script.ScriptEngine" is loadable via basic reflection.
+			return forName("javax.script.ScriptEngine", name);
+		}
+
+		static Evaluator forName(String nameOfScriptEngine, String name) {
+			// Assert that precondition name is loadable via basic reflection.
+			try {
+				Class.forName(nameOfScriptEngine);
+			}
+			catch (Throwable cause) {
+				String message = "Class `" + nameOfScriptEngine + "` is not loadable, " //
+						+ "script-based test execution is disabled. " //
+						+ "If the originating cause is a `NoClassDefFoundError: javax/script/...` and " //
+						+ "the underlying runtime environment is executed with an activated module system " //
+						+ "(aka Jigsaw or JPMS) you need to add the `java.scripting` module to the " //
+						+ "root modules via `--add-modules ...,java.scripting`";
+				return new ThrowingEvaluator(message, cause);
+			}
+			// Now create the evaluator instance specified by its class name.
+			try {
+				return (Evaluator) Class.forName(name).getDeclaredConstructor().newInstance();
+			}
+			catch (ReflectiveOperationException cause) {
+				String message = "Creating instance of class `" + name + "` failed," //
+						+ "script-based test execution is disabled.";
+				return new ThrowingEvaluator(message, cause);
+			}
+		}
+
 	}
 
-	private Bindings createBindings(ExtensionContext context) {
-		ScriptAccessor configurationParameterAccessor = new ScriptAccessor.ConfigurationParameterAccessor(context);
-		Bindings bindings = new SimpleBindings();
-		bindings.put(Script.BIND_JUNIT_TAGS, context.getTags());
-		bindings.put(Script.BIND_JUNIT_UNIQUE_ID, context.getUniqueId());
-		bindings.put(Script.BIND_JUNIT_DISPLAY_NAME, context.getDisplayName());
-		bindings.put(Script.BIND_JUNIT_CONFIGURATION_PARAMETER, configurationParameterAccessor);
-		return bindings;
-	}
+	/**
+	 * Evaluator implementation that always throws an {@link ScriptEvaluationException}.
+	 */
+	static class ThrowingEvaluator implements Evaluator {
 
-	ConditionEvaluationResult evaluate(ScriptExecutionManager manager, Script script, Bindings bindings) {
-		if (script == null) {
-			return null;
-		}
-		try {
-			Object result = manager.evaluate(script, bindings);
-			return computeConditionEvaluationResult(script, result);
-		}
-		catch (ScriptException e) {
-			throw new ScriptEvaluationException("Script evaluation failed for: " + script.getAnnotationAsString(), e);
-		}
-	}
+		final ScriptEvaluationException exception;
 
-	ConditionEvaluationResult computeConditionEvaluationResult(Script script, Object result) {
-		// Treat "null" result as an error.
-		if (result == null) {
-			throw new ScriptEvaluationException("Script returned `null`: " + script.getAnnotationAsString());
+		ThrowingEvaluator(String message, Throwable cause) {
+			this.exception = new ScriptEvaluationException(message, cause);
 		}
 
-		// Trivial case: script returned a custom ConditionEvaluationResult instance.
-		if (result instanceof ConditionEvaluationResult) {
-			return (ConditionEvaluationResult) result;
+		@Override
+		public ConditionEvaluationResult evaluate(ExtensionContext context, List<Script> scripts) {
+			throw exception;
 		}
-
-		String resultAsString = String.valueOf(result);
-		String reason = script.toReasonString(resultAsString);
-
-		// Cast or parse result to a boolean value.
-		boolean isTrue;
-		if (result instanceof Boolean) {
-			isTrue = (Boolean) result;
-		}
-		else {
-			isTrue = Boolean.parseBoolean(resultAsString);
-		}
-
-		// Flip enabled/disabled result based on the associated annotation type.
-		if (script.getAnnotationType() == EnabledIf.class) {
-			return isTrue ? enabled(reason) : disabled(reason);
-		}
-		if (script.getAnnotationType() == DisabledIf.class) {
-			return isTrue ? disabled(reason) : enabled(reason);
-		}
-
-		// Still here? Not so good.
-		throw new ScriptEvaluationException("Unsupported annotation type: " + script.getAnnotationType());
 	}
 
 }
